syntax = "proto3";
package base;

option go_package = "github.com/dnovikoff/mahjong-api/genproto/base";

// This table contains several yakus, meaning the same, depending on choosen formating rules.
// For example there is YAKUHAI, TON, SELF_TON, ROUND_TON.
enum Yaku {
	YAKU_UNSPECIFIED = 0;
	RIICHI = 1;
	DABURI = 2;
	IPPATSU = 3;
	TSUMO = 4;
	TANYAO = 5;
	CHANTA = 6;
	JUNCHAN = 7;
	HONROUTO = 8;

	// yakuhai and variants
	YAKUHAI = 9;
	HAKU = 10;
	HATSU = 11;
	CHUN = 12;
	WIND_ROUND = 13;
	WIND_SELF = 14;

	TON = 15;
	NAN = 16;
	SJA = 17;
	PEI = 18;

	SELF_TON = 19;
	SELF_NAN = 20;
	SELF_SJA = 21;
	SELF_PEI = 22;

	ROUND_TON = 23;
	ROUND_NAN = 24;
	ROUND_SJA = 25;
	ROUND_PEI = 26;

	CHIITOI = 27;
	TOITOI = 28;
	SANANKOU = 29;
	SANKANTSU = 30;
	SANSHOKU = 31;
	SHOUSANGEN = 32;
	PINFU = 33;
	IPPEIKO = 34;
	RYANPEIKOU = 35;
	ITSUU = 36;
	SANSHOKUDOUKOU = 37;
	HONITSU = 38;
	CHINITSU = 39;
	DORA = 40;
	URADORA = 41;
	AKADORA = 42;
	RENHOU_MANGAN = 43;
	HAITEI = 44;
	HOUTEI = 45;
	RINSHAN = 46;
	CHANKAN = 47;
}

enum Yakuman {
    YAKUMAN_UNSPECIFIED = 0;
	KOKUSHI = 1;
	KOKUSHI13 = 2;
	SUUKANTSU = 3;
	SUUANKOU = 4;
	SUUANKOUTANKI = 5;
	DAISANGEN = 6;
	SHOUSUUSHI = 7;
	DAISUUSHI = 8;
	RYUUIISOU = 9;
	TSUIISOU = 10;
	CHINROUTO = 11;
	CHUURENPOOTO = 12;
	CHUURENPOOTO9 = 13;
	TENHOU = 14;
	CHIHOU = 15;
	RENHOU = 16;
}

message YakuValue {
	Yaku yaku = 1;
	// Han value
	int64 han = 2;
}

message YakumanValue {
	Yakuman yakuman = 1;
	// Used 1 for single and 2 for double yakumans
	int64 multiplier = 2;
}