syntax = "proto3";

package mahjong.base;

option go_package = "github.com/dnovikoff/mahjong-api/genproto/public/base";

enum Wind {
    WIND_UNSPECIFIED = 0;
    EAST = 1;
    SOUTH = 2;
    WEST = 3;
    NORTH = 4;
}

enum Limit {
    LIMIT_UNSPECIFIED = 0;
    MANGAN = 1;
    HANEMAN = 2;
    BAIMAN = 3;
    SANBAIMAN = 4;
    YAKUMAN = 5;
}

enum Opponent {
    OPPONENT_UNSPECIFIED = 0;
    SELF = 1;
    RIGHT = 2;
    FRONT = 3;
    LEFT = 4;
}

// Special holder to be used in repeat.
message Instances {
    repeated int64 instances = 1;
}

message Meld {
    // Oponent is set, related to one who declared
    Opponent opponent = 1;
    int64 called_instance = 2;
    // Only for upgraded pon
    int64 upgrade_instance = 3;
    base.Instances hand = 4;
    // To identify melds on the table.
    // In case of pon upgrade the meld_id will correspond to upgraded pon.
    int64 meld_id = 5;
    // When closed kan declared (or upgrade)
    bool includes_tsumo = 6;
}
